--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-
-*.pyc
-*.pyc
-*.pyc
-*.pyc
-*.pyc
 .DS_Store
-.DS_Store
-lab1-pacman/searchAgents.pyc
-.DS_Store
+dogImages/
+lfw/
+saved_models/weights.best.from_scratch.hdf5
+saved_models/weights.best.vgg16.hdf5
+.ipynb_checkpoints/
+bottleneck_features/DogVGG16Data.npz
